Fix the alignment of the button

--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ img {
 .second-div {
   display: inline-block;
   padding: 1em 1.1em 2em;
+  text-align: left;
 }
 
 h2 {
